<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Vert Music</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="prompt_username"> Username</string>
    <string name="prompt_password"> Password</string>
    <string name="prompt_email"> E-mail</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="title_activity_register">Register</string>
    <string name="create_account"> Create account</string>
    <string name="full_name"> Full name</string>
    <string name="username"> Username</string>
    <string name="vertLogo">vertLogo</string>
    <string name="title_activity_playlist">Playlists</string>
    <string name="errorText">nothing</string>
    <string name="title_activity_song">SongActivity</string>
    <string name="title_activity_player">Player</string>
    <string name="pause">Pause</string>
    <string name="play">Play</string>
    <string name="loginPrompt">Please sign in</string>

</resources>
