<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".LogIn"
    android:background="#ff333333"
    android:scaleType="fitXY">

    <LinearLayout
        android:id="@+id/LogInForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

    </LinearLayout>

    <Button
        android:id="@+id/user_sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_sign_in"
        android:onClick="onSignInClick"
        android:layout_gravity="center_horizontal"
        android:background="@null"
        android:focusableInTouchMode="false"
        android:textColor="#ff9fc847"
        android:fontFamily="normal"
        android:textStyle="bold"
        android:textSize="15sp"
        android:layout_below="@+id/LogInForm"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView" />

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:contentDescription="@string/vertLogo"
        android:src="@drawable/header"
        android:scaleType="fitCenter"
        android:adjustViewBounds="false"

        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="56dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_register"
        android:id="@+id/register_button"
        android:onClick="onRegisterClick"
        android:background="@null"
        android:textColor="#ff9fc847"
        android:textStyle="bold"
        android:layout_below="@+id/user_sign_in_button"
        android:layout_alignLeft="@+id/user_sign_in_button"
        android:layout_alignStart="@+id/user_sign_in_button"
        android:layout_marginTop="59dp"
        android:layout_alignRight="@+id/user_sign_in_button"
        android:layout_alignEnd="@+id/user_sign_in_button"
        android:visibility="invisible" />

    <EditText
        android:id="@+id/email"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:hint="@string/prompt_username"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:singleLine="true"
        android:nestedScrollingEnabled="false"
        android:background="@drawable/rounded_edittext"
        android:gravity="center"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/password"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:hint="@string/prompt_password"
        android:imeActionId="@+id/login"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true"
        android:background="@drawable/rounded_edittext"
        android:gravity="center"
        android:layout_above="@+id/LogInForm"
        android:layout_alignLeft="@+id/email"
        android:layout_alignStart="@+id/email" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginPrompt"
        android:id="@+id/textView"
        android:textColor="#ff9fc847"
        android:textStyle="bold"
        android:textSize="15dp"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp" />

</RelativeLayout>
